$Id$

2017-12-17  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-g all', '-l scterc' and
	'-l scttemp'.

	ataprint.cpp: Don't print obsolete SCT Support Level (#940).

2017-12-14  Christian Franke  <franke@computer.org>

	ataprint.cpp: JSON '-A' output: Add booleans and string for attribute
	flags.  Remove string array.  Rename table.

	ataprint.cpp: Add JSON support for '-l [x]error'.

2017-12-13  Christian Franke  <franke@computer.org>

	smartctl.cpp, smartctl.8.in: Rename '--json=a' to '--json=o'.

	smartctl.cpp: Show command line error messages in JSON output.

	ataprint.cpp: Add JSON support for '-l [x]selftest' and
	'-l directory'.

	atacmds.cpp, atacmds.h: Move self-test print functions to ...
	ataprint.cpp: ... here.
	smartd.cpp: Rework self-test error counting.

	ataprint.cpp: Add JSON support for '-c'.

	atacmds.cpp, atacmds.h: Change return type of capability checks to
	bool.  Declare simple checks inline.

2017-12-07  Christian Franke  <franke@computer.org>

	json.cpp: Avoid 'cbegin()' and 'cend()' to fix build with older
	libstdc++.

	json.cpp, json.h, smartctl.cpp, smartctl.8.in: Add '--json=s' option.
	Outputs JSON object elements sorted by key.
	Add '--json=g' option.  Outputs JSON structure suitable for grep.

2017-12-05  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-l sataphy'.

	smartctl.cpp: Add JSON support for '--scan'.
	Add similar device info to regular JSON output.
	ataprint.cpp, scsiprint.cpp: Remove now duplicate "protocol" element.

	smartctl.cpp: Silence false positive warnings from clang analyzer.

2017-12-02  Christian Franke  <franke@computer.org>

	Add initial support for smartctl JSON output mode (#766):
	json.cpp, json.h: New files with JSON support class.
	Makefile.am, os_win32/vc14/smartctl.vcxproj*: Add new files.
	ataprint.cpp: Add initial JSON support for -i, -H, -A and -l [x]error.
	scsiprint.cpp: Add initial JSON support for -i and -H.