@@ -1,5 +1,10 @@
 $Id$
 
+2017-12-21  Douglas Gilbert  <dgilbert@interlog.com>
+
+	scsiprint.cpp: Start some JSON work. Other cleanups and helper
+	functions; potentially new header for those helpers.
+
 2017-12-17  Christian Franke  <franke@computer.org>
 
 	ataprint.cpp: Add JSON support for '-g all', '-l scterc' and
